--- a/public/login.html
+++ b/public/login.html
@@ -15,8 +15,10 @@
       <button type="submit">Login</button>
       <p id="error" class="error"></p>
     </form>
+    <p class="signup-link">Not registered? <a href="register.html">Sign up here</a></p>
   </div>
 
   <script src="script.js"></script>
 </body>
 </html>
+
